--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
-name = "osm2memgraph"
-version = "0.0.1"
+authors = ["Jacob Hall <email@jacobhall.net>"]
 edition = "2021"
+name = "skyway"
+version = "0.0.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rsmgclient = "2.0.2"
+# steel-interpreter = { git = "https://github.com/mattwparas/steel" }
+# rsmgclient = "2.0.2"
 osmpbf = "0.2"
 clap = { version = "4.4.7", features = ["derive"] }
-toml = "0.8.8"
 indicatif = "0.17.7"
+json = "0.12.4"
+chrono = "0.4.31"
