--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ name = "skyway"
 version = "0.0.1"
 
 [dependencies]
-osmpbf = "0.3.4"
 clap = { version = "4.5.10", features = ["derive"] }
 indicatif = "0.17.8"
 json = "0.12.4"
+osmpbf = "0.3.4"
 pest = "2.7.11"
 pest_derive = "2.7.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
