update README.md, package metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 authors = ["Jacob Hall <email@jacobhall.net>"]
+description = "A command-line OpenStreetMap file converter"
 edition = "2021"
+license = "GPL-3.0-or-later"
 name = "skyway"
 version = "0.0.1"
 
