--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ json = "0.12.4"
 osmpbf = "0.3.4"
 pest = "2.7.11"
 pest_derive = "2.7.11"
+rename-item = "0.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
