--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ name = "skyway"
 version = "0.0.1"
 
 [dependencies]
+cel-interpreter = "0.8.1"
 clap = { version = "4.5.10", features = ["derive"] }
 indicatif = "0.17.8"
 json = "0.12.4"
