--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ version = "0.0.2"
 [dependencies]
 cel-interpreter = "0.8.1"
 clap = { version = "4.5.10", features = ["derive"] }
+env_logger = "0.11.5"
 indicatif = "0.17.8"
 json = "0.12.4"
+log = "0.4.22"
 osmpbf = "0.3.4"
 pest = "2.7.11"
 pest_derive = "2.7.11"
@@ -18,3 +20,4 @@ quick-xml = { version = "0.36.1", features = ["overlapped-lists", "serialize"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-aux = "4.5.0"
 serde_json = "1.0"
+thiserror = "1.0.63"
