--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ cel-interpreter = "0.8.1"
 clap = { version = "4.5.10", features = ["derive"] }
 env_logger = "0.11.5"
 indicatif = "0.17.8"
+itertools = "0.13.0"
 json = "0.12.4"
 log = "0.4.22"
 osmpbf = "0.3.4"
