--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,13 @@ env_logger = "0.11.5"
 indicatif = "0.17.8"
 itertools = "0.13.0"
 json = "0.12.4"
+lexical = "6.1.1"
 log = "0.4.22"
 osmpbf = "0.3.4"
 pest = "2.7.11"
 pest_derive = "2.7.11"
 quick-xml = { version = "0.36.1", features = ["overlapped-lists", "serialize"] }
+rayon = "1.10.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-aux = "4.5.0"
 serde_json = "1.0"
