--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ itertools = "0.13.0"
 json = "0.12.4"
 lexical = "6.1.1"
 log = "0.4.22"
+once_cell = "1.19.0"
 osmpbf = "0.3.4"
 pest = "2.7.11"
 pest_derive = "2.7.11"
@@ -33,3 +34,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde-aux = "4.5.0"
 serde_json = "1.0"
 thiserror = "1.0.63"
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
